--- a/app/posts/templates/posts/post_detail.html
+++ b/app/posts/templates/posts/post_detail.html
@@ -19,7 +19,7 @@
     <div class="main content">
         {{ post.body }}
             <form action="{{ url_for('posts.edit_post',slug = post.slug) }}">
-                <button type="submit" class="btn btn-success">Edit</button>
+                <button type="submit" class="btn btn-success">Edit post</button>
             </form>
     </div>
 {% endblock %}
